[package]
name = "xstq"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
better-panic = "0.3.0"
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
glob = "0.3.2"
log = "0.4.27"
pretty_assertions = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
stderrlog = "0.6.0"
toml = "0.8.23"
tree-sitter = "0.25.6"
tree-sitter-php = "0.23.11"
xee-interpreter = "0.1.5"
xee-xpath = "0.1.4"
xot = "0.29.0"
